<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <LinearLayout
        android:id="@+id/header"
        android:background="@drawable/ic_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textregist"
            android:text="Register"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            />



    </LinearLayout>

    <EditText
        android:id="@+id/user"
        android:hint="Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="28dp"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:hint="Email"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/t_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:hint="Phone Number"
        android:inputType="number"
        android:maxLength="12"
        android:textSize="14dp" />

    <RadioButton
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/t_phone"
        android:id="@+id/radio_male"
        android:text="@string/rb_1"/>
    <RadioButton
        android:id="@+id/radio_female"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginRight="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/t_phone"
        android:text="@string/rb_2"
        />
    <Spinner
        android:hint="Blood Type"
        android:id="@+id/b_type"
        android:layout_width="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:layout_below="@+id/radio_male"
        android:entries="@array/slcblood"
        />
    <Spinner
        android:id="@+id/reshus"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:layout_below="@+id/radio_female"
        android:entries="@array/reshus"

        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_type"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="14dp" />
    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:hint="Retype Password"
        android:inputType="textPassword"
        android:textSize="14dp" />

    <RadioButton
        android:id="@+id/radio_personal"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_below="@+id/repassword"
        android:layout_marginLeft="40dp"
        android:hint="Personal"
        android:text="@string/rb_3" />

    <RadioButton
        android:id="@+id/radio_organization"
        android:hint="Organization"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginRight="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/repassword"
        android:text="@string/rb_4"
        />
    <Spinner
        android:id="@+id/job"
        android:layout_width="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_height="40dp"
        android:layout_below="@+id/radio_organization"
        android:entries="@array/jb"
        />

    <EditText
        android:id="@+id/home_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/job"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:hint="Home Address"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/defaultloc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_add"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:drawableRight="@drawable/ic_blood_needed_location"
        android:hint="Default Location"
        android:textSize="14dp" />

    <CheckBox
        android:id="@+id/chkbox"
        android:button="@drawable/tmbl_agree"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/defaultloc"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/Check"

        />
    <Button
        android:id="@+id/btnreg"
        style="@style/Register"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/chkbox"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_centerInParent="true"


        />
</RelativeLayout>

